# final_design

./: README.md  Untitled.ens  bow.ens  clarient.ens  flute.ens  string.ens
WaveGuideSoft/: CMakeLists.txt  STM32H750XBHX_FLASH.ld
ch552cdc/: CMakeLists.txt  README.md
ch552cdc/cmake/: TC-sdcc-msc51.cmake
ch552cdc/include/: debug.h
ch552cdc/output/: main.hex
ch552cdc/src/: main.c
ch552cdc/tool/: lint.h
ch552keyboard/: CMakeLists.txt
keyboard/: 1New_Library_1.bak  1New_Library_1.kicad_sym  keyboard.kicad_pcb  keyboard.kicad_prl  keyboard.kicad_pro  keyboard.kicad_sch  sym-lib-table
mainpcb/: 1New_Library_0.bak  1New_Library_0.kicad_sym  (+7 more)
pctest/src/: CMakeLists.txt
pctest/src/Waveguide/: main.cpp
pctest/src/Waveguide/bsp/: ControlIO.cpp  ControlIO.hpp
pctest/src/Waveguide/dsp/: AudioFFT.cpp  Body.cpp  Bowed.cpp  Bowed.hpp  CombAllpass.hpp  DCBlocker.hpp  DelayAllocator.cpp  DelayLine.cpp  DelayLine.hpp  ExpSmoother.hpp  ExpSmoother2.hpp  Lowpass.hpp  MidiManager.cpp  MidiManager.hpp  Noise.hpp  Note.hpp  OnePoleFilter.cpp  ParamDesc.hpp  PluckString.cpp  PluckString.hpp  Reed.cpp  Reed.hpp  Reverb.cpp  Reverb.hpp  SVF.cpp  SVF.hpp  SafeCallback.cpp  SafeCallback.hpp  SplitMatrix.cpp  SplitMatrix.hpp  Synth.cpp  Synth.hpp  ThrianDispersion.cpp  ThrianDispersion.hpp  TuningFilter.hpp  Util.hpp  params.hpp
pctest/src/Waveguide/gui/: GuiDispatch.cpp  GuiDispatch.hpp
pctest/src/Waveguide/oled/: FontMono.cpp  OLEDDisplayMono.cpp  OLEDDisplayRGB.cpp  OLEDDisplayRGB.h
pctest/src/Waveguide/type/: AnyObj.hpp
pctest/src/Waveguide/utli/: Lerp.hpp
(+197 files in other folders)
